Fixed permanent horizontal scrollbar for article galleries

--- a/public/styles/module/article/_media.scss
+++ b/public/styles/module/article/_media.scss
@@ -35,7 +35,7 @@ figcaption {
 
 	&:not(.linked-gallery) {
 		overflow: {
-			x: scroll;
+			x: auto;
 			y: hidden;
 		}
 		white-space: nowrap;
